--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta lang="en">
         <title>DICE</title>
         <link rel="stylesheet" href="styles.css">
+        <!-- <link href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
+        <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"> -->
     </head>
 
     <body>
-        <h1>Roll the dice..</h1>
+        <h1>Roll the dice</h1>
         <div class="ps">
         <div class="p1"><h2>Player-1</h2>
         <img src="" alt="loading..">
@@ -16,6 +18,8 @@
         <div class="p2"><h2>Player-2</h2>
             <img src="" alt="loading..">
         </div>
+        <div><h3 class="res"></h3></div>
+        <div><button class="ref" onClick="window.location.reload();">Play</button></div>
     </div>
         <div class="web">www🎲div🎲com</div>
         <script src="index.js"  charset="utf-8"></script>
